+menu-overflow-fix

--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -2,7 +2,7 @@
   margin: auto;
   width: 80%;
   max-width: 1000px;
-  max-width: 800px;
-  min-width: 500px;
+  /* max-width: 800px; */
+  min-width: 650px;
   font-family: Helvetica, sans-serif;
 }
